# userbackend

./: .env  Cargo.toml  README.md  apis.rest  migrationdb.md  user.sql
migrations/: 20240112191759_init.sql  20240112191952_adduser.sql
src/: main.rs  router.rs
src/common/: jwt_auth.rs  mod.rs  util.rs
src/jwt/: jwt_auth.rs
src/users/: apis.rs  db.rs  jwt.rs  mod.rs  models.rs
