[package]
name = "userbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
hyper = { version = "1.0.1", features = ["full"] }
tower = "0.4"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
] }

utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = { version = "9.2.0" }
bcrypt = "0.15.0"
